--- a/Enigma.vcxproj.filters
+++ b/Enigma.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClCompile Include="EntryWheel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Rotor.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Reflector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -34,6 +31,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Enigma.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RotorConstDeconst.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RotorLogic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
